# prompts

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  ci.yml
prompts/: basic.md  change-of-tone-detection.md  coherence-coach.md  functions-v2.md  functions.md  groq.md  language.md  precise.md
prompts/awdev/: change-of-tone-detection.md  coherence-coach.md
prompts/awesome/: character.md  english-spoken.md  english.md  excel.md  interviewer.md  javascript-console.md  linux-terminal.md  mj-prompt-gen.md  prompt-enhancer.md  prompt-gen.md  storyteller.md  tic-tac-toe.md  travel-guide.md
prompts/conditional/: should-reply.md
prompts/reasoning/: stepped.md  thoughts.md
prompts/store/: colab-crafter.md  cover-letter.md  dan-coe.md  genz-memes.md  habit-coach.md  is-healthy.md  leetcode-solver.md  math-mentor.md  nodejs-project-builder.md  py-code-compl.md  react-project-builder.md  writing-coach.md
prompts/sum/: concise.md  condense.md  key-points-v1.md  key-points-v2.md
python/aip/: __init__.py  __main__.py  aip.pyi  cli.py
src/: connection.rs  inquiries.rs  lib.rs  macros.rs  main.rs  md_parser.rs  prompts.rs
